--- a/src/assets/scss/pages/_support.scss
+++ b/src/assets/scss/pages/_support.scss
@@ -12,7 +12,7 @@
    height: 100vh;
    @include flex(center, center);
    .container {
-      @include flex(center, flex-start, 0.4rem);
+      @include flex(center, flex-start, 3rem);
       .box {
          background-color: #d9d9d9;
          padding: 2rem 1.5rem;
@@ -38,6 +38,7 @@
 @media (max-width: 992px) {
    .support-page .container {
       flex-direction: column-reverse;
+      gap: 0.4rem;
    }
    .support-page .container .box {
       margin-right: 0;
